// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers should handle an undefined http status: 0 message 1`] = `"ERROR"`;

exports[`Helpers should handle an undefined http status: undefined message 1`] = `"ERROR"`;

exports[`Helpers should handle basic object updates: setPropIfDefined 1`] = `
Object {
  "lorem": "ipsum",
}
`;

exports[`Helpers should handle basic object updates: setPropIfDefined undefined 1`] = `Object {}`;

exports[`Helpers should handle basic object updates: setPropIfTruthy bool 1`] = `
Object {
  "lorem": true,
}
`;

exports[`Helpers should handle basic object updates: setPropIfTruthy number 1`] = `Object {}`;

exports[`Helpers should handle basic object updates: setPropIfTruthy string 1`] = `
Object {
  "lorem": true,
}
`;

exports[`Helpers should handle http status 400 level error messages from response: 400 error message 1`] = `"Lorem ipsum dolor sit"`;

exports[`Helpers should handle http status 400 level error messages from response: 400 fallback again error message 1`] = `"Request failed with status code XXX"`;

exports[`Helpers should handle http status 400 level error messages from response: 400 fallback error message 1`] = `""`;

exports[`Helpers should handle http status 400 level error messages from response: 400 fallback yet again error message 1`] = `"XXX Request failed"`;

exports[`Helpers should handle http status 400 level error messages from response: 400 filtered blank message 1`] = `""`;

exports[`Helpers should handle http status 400 level error messages from response: 400 filtered message 1`] = `"Lorem ipsum dolor sit"`;

exports[`Helpers should handle http status 500 level error messages from response: 500 level error message 1`] = `"500 Lorem ipsum dolor sit"`;

exports[`Helpers should handle http status 500 level error messages from response: 500 level fallback again error message 1`] = `"500 Request failed with status code XXX"`;

exports[`Helpers should handle http status 500 level error messages from response: 500 level fallback error message 1`] = `"500 "`;

exports[`Helpers should handle http status 500 level error messages from response: 500 level fallback yet again error message 1`] = `"500 XXX Request failed"`;

exports[`Helpers should handle http status less than 400 message from response: 200 message 1`] = `"Request success XXX"`;

exports[`Helpers should handle http status less than 400 message from response: 399 message 1`] = `"Request success XXX"`;

exports[`Helpers should handle http status less than 400 message from response: 400 message 1`] = `"Request success XXX"`;

exports[`Helpers should handle view related selectors and props updates: createViewQueryObject 1`] = `
Object {
  "page": 1,
  "page_size": 10,
}
`;

exports[`Helpers should have specific functions: helpers 1`] = `
Object {
  "DEV_MODE": false,
  "FULFILLED_ACTION": [Function],
  "PENDING_ACTION": [Function],
  "REJECTED_ACTION": [Function],
  "RH_BRAND": false,
  "TEST_MODE": true,
  "createViewQueryObject": [Function],
  "devModeNormalizeCount": [Function],
  "downloadData": [Function],
  "generateId": [Function],
  "getMessageFromResults": [Function],
  "getStatusFromResults": [Function],
  "getTimeStampFromResults": [Function],
  "ipAddressValue": [Function],
  "isIpAddress": [Function],
  "noop": [Function],
  "scanStatusIcon": [Function],
  "scanTypeIcon": [Function],
  "setPropIfDefined": [Function],
  "setPropIfTruthy": [Function],
  "setStateProp": [Function],
  "sourceTypeIcon": [Function],
  "viewPropsChanged": [Function],
}
`;

exports[`Helpers should support icon references: scanStatusIcon 1`] = `
Object {
  "classNames": Array [],
  "name": "ok",
  "type": "pf",
}
`;

exports[`Helpers should support icon references: scanTypeIcon 1`] = `
Object {
  "name": "connected",
  "type": "pf",
}
`;

exports[`Helpers should support icon references: sourceTypeIcon 1`] = `
Object {
  "name": "vcenter",
  "type": "pf",
}
`;

exports[`Helpers should update a state object: dont reset state object 1`] = `
Object {
  "ipsum": false,
  "lorem": true,
}
`;

exports[`Helpers should update a state object: reset state object 1`] = `
Object {
  "ipsum": true,
  "lorem": true,
}
`;
